--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Download <span class="blue">Leno</span></h2>
-                        <p class="p-large">Target the right customers for your business with the help of Leno's patented technology and increase conversion figures in less than 2 weeks</p>
-                        <a class="btn-solid-lg" href="https://drive.google.com/uc?id=1zthB64zU-z_IbWdwnHhhZ40T-DZ99Tjd&export=download"><i class="fab fa-google-play"></i>DOWNLOAD LINK 1</a>
+                        <h2>Download <span class="blue">Now</span></h2> <a class="btn-solid-lg" href="https://drive.google.com/uc?id=1zthB64zU-z_IbWdwnHhhZ40T-DZ99Tjd&export=download"><i class="fab fa-google-play"></i>DOWNLOAD LINK 1</a>
                         <a class="btn-solid-lg" href="https://github.com/rialms/corona/raw/master/Corona%20Update%201.0.apk"><i class="fab fa-google-play"></i>DOWNLOAD LINK 2</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
